# flaskgpt

./: README.md  app.py  pyproject.toml  requirements.txt
templates/: index.html
